plugins {
	id 'org.jetbrains.kotlin.jvm'               version '2.3.20'
	id 'org.jetbrains.kotlin.plugin.spring'      version '2.3.20'

	id 'org.springframework.boot'                version '4.1.0-M4'
	id 'io.spring.dependency-management'         version '1.1.7'
	id 'org.graalvm.buildtools.native'           version '0.10.6'
	id 'com.google.cloud.tools.jib'              version '3.5.3'
}

group = 'org.niikage'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	// SPRING BOOT
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// KOTLIN / REACTOR
	implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'
	implementation 'org.jetbrains.kotlin:kotlin-reflect'
	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
	implementation 'tools.jackson.module:jackson-module-kotlin'

	// DATABASE
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.apache.commons:commons-pool2'
	implementation 'org.springframework:spring-jdbc'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'org.postgresql:r2dbc-postgresql'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// RATE LIMITING
	implementation 'com.bucket4j:bucket4j-core:8.10.1'

	// OPENAPI / SWAGGER
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:3.0.3'
	implementation 'org.springdoc:springdoc-openapi-starter-common:3.0.3'

	// DEV / BUILD
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	// TESTS
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test'
	testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

kotlin {
	compilerOptions {
		freeCompilerArgs.addAll '-Xjsr305=strict', '-Xannotation-default-target=param-property'
	}
}

// GRAALVM NATIVE
graalvmNative {
	binaries {
		main {
			imageName = 'planr'

			buildArgs.addAll(
					'--no-fallback',
					'--initialize-at-build-time=org.slf4j',
					'-H:IncludeLocales=en,ru',
					'--gc=serial',
					'-O2'
			)
		}
	}
}

// JIB
jib {
	from {
		image = "eclipse-temurin:25-jre-alpine"
	}
	to {
		image = "ghcr.io/lifernod/planr"
		tags  = ["latest-jvm"]
	}
	container {
		jvmFlags = [
				"-XX:+UseZGC",
				"-XX:+ZGenerational",
				"-Xms128m",
				"-Xmx384m",
				"-XX:+UseContainerSupport",
				"-XX:CICompilerCount=2",
				"-XX:ZUncommitDelay=30",
				"-XX:+ZUncommit",
				"-Dspring.profiles.active=prod"
		]
		ports          = ["8080"]
		creationTime   = "USE_CURRENT_TIMESTAMP"
	}
}